add: several additions, see below
1) local boot reads config from disk
2) dhcp template. dora implementation waiting

Signed-off-by: Kazım SARIKAYA <kazimsarikaya@sanaldiyar.com>

--- a/hack/syslinux.cfg
+++ b/hack/syslinux.cfg
@@ -1,4 +1,4 @@
 DEFAULT k8sinit
 LABEL k8sinit
 kernel /vmlinuz
-append initrd=/initramfs k8sinit.role=manager
+append initrd=/initramfs k8sinit.role=installer
